[package]
name = "wots"
version = "0.1.0"
authors = ["Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Winternitz One Time Signature Scheme (W-OTS+) in Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
sha2 = "0.8"
byteorder = "1.3.2"
